baseline done, now it comes to implement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.0)
 
 project(CRTP_Exam)
 
-add_executable(main src/main.c src/ActorThread.c src/ConsumerThread.c src/ClientThread.c)
+add_executable(main src/main.c src/ActorThread.c src/ConsumerThread.c src/ClientThread.c src/ProducerThread.c)
